--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,8 @@ colorama
 fuzzywuzzy
 python-Levenshtein
 googletrans==4.0.0-rc1
+Flask==1.1.2
+gunicorn==20.1.0
+Jinja2==3.0.3
+werkzeug==2.0.2
+itsdangerous==2.0.1
